Fix layout bug

--- a/src/css/layouts/belly.scss
+++ b/src/css/layouts/belly.scss
@@ -96,7 +96,6 @@
     box-sizing: border-box;
     width: 100%;
     padding: 15px;
-    margin-bottom: 30px;
     line-height: 1.5;
     word-wrap: break-word;
   }
